<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dashboard_layout">

    <!--<TextView-->
        <!--android:id="@+id/count_down_timer"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:text="@string/default_time"-->
        <!--android:layout_centerInParent="true"/>-->

    <TextView
        android:id="@+id/header_number_of_rounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:id="@+id/round_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_number_of_rounds"
        android:layout_centerInParent="true"
        android:paddingLeft="45dp">

        <EditText
            android:id="@+id/user_input_of_rounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_number_of_rounds"
            android:cursorVisible="false"
            android:paddingRight="50dp"
            android:background="@android:color/transparent"/>

    </LinearLayout>



    <TextView
        android:id="@+id/header_work_interval_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/header_number_of_rounds"/>
    <LinearLayout
        android:id="@+id/work_interval_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_work_interval_time"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/work_round_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:cursorVisible="false"
            android:paddingRight="10dp"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/colon_for_work_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon_for_time"/>

        <EditText
            android:id="@+id/work_round_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:cursorVisible="false"
            android:paddingLeft="10dp"
            android:background="@android:color/transparent"/>
    </LinearLayout>



    <TextView
        android:id="@+id/header_rest_interval_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rest_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/header_work_interval_time"/>
    <LinearLayout
        android:id="@+id/rest_round_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_rest_interval_time"
        android:layout_centerInParent="true"
        android:layout_margin="20dp">

        <EditText
            android:id="@+id/rest_round_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:paddingRight="10dp"
            android:cursorVisible="false"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/colon_for_rest_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon_for_time"/>

        <EditText
            android:id="@+id/rest_round_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:paddingLeft="10dp"
            android:cursorVisible="false"
            android:background="@android:color/transparent"/>
    </LinearLayout>



    <Button
        android:id="@+id/start_timer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_timer"
        android:layout_centerInParent="true"
        android:layout_below="@id/rest_round_time"/>

    <Button
        android:id="@+id/stop_timer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_timer"
        android:layout_centerInParent="true"
        android:layout_below="@id/start_timer_button"/>

</RelativeLayout>