<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/timer_display"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_id_banner">
    </com.google.android.gms.ads.AdView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/round_indicator"
        android:layout_alignLeft="@+id/pause_and_go"
        android:layout_alignStart="@+id/pause_and_go">

        <TextView
            android:id="@+id/round_display"
            style="@style/DisplayType34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:text="@string/round_string"/>

        <TextView
            style="@style/DisplayType34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "/>

        <TextView
            android:id="@+id/remaining_rounds"
            style="@style/DisplayType34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1" />

        <TextView
            android:id="@+id/back_slash_rounds"
            style="@style/DisplayType34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/" />

        <TextView
            android:id="@+id/total_rounds"
            style="@style/DisplayType34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1" />
    </LinearLayout>



    <TextView
        android:id="@+id/count_down_timer"
        style="@style/DisplayType112"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/default_time"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/round_indicator"
        style="@style/Headline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Work"
        android:layout_above="@+id/count_down_timer"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/pause_and_go"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_below="@+id/count_down_timer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        style="@style/textSize20"
        android:elevation="24dp"
        android:text="Pause" />

    <Button
        android:id="@+id/Reset"
        android:layout_width="200dp"
        android:layout_height="90dp"
        style="@style/textSize20"
        android:elevation="24dp"
        android:text="Reset"
        android:layout_below="@+id/pause_and_go"
        android:layout_alignLeft="@+id/pause_and_go"
        android:layout_alignStart="@+id/pause_and_go" />


</RelativeLayout>